fix about on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  min-height: 100vh;
+  width: 100%;
 }
 
 .loader {
