--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -8,12 +8,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   width: 100%;
+  height: fit-content;
+  padding: 100px 0;
 }
 
 .about__title {
-  margin-bottom: 50px;
   font-size: 3rem;
   text-transform: uppercase;
   text-align: center;
@@ -32,6 +32,7 @@
   font-weight: bold;
   line-height: 40px;
   text-shadow: 2px 2px #000;
+  padding-top: 50px;
   margin: 0 500px;
 }
 
